# SatoApp

./: .actrc  .coverage  .dockerignore  .gcloudignore  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_CHECKLIST.md  Dockerfile  GOOGLE_ADS_SETUP.md  IP_WHITELISTING_GUIDE.md  OAUTH_CALLBACK_FIX_GUIDE.md  README.md  add_kpi_data.py  alembic.ini  analyze_database.py  check_db_tables.py  clear_invalid_connections.py  comprehensive_analysis.py  comprehensive_database_analysis.json  coverage.xml  data.db  database.py  database_schema_diagram.mmd  debug_db.py  debug_facebook_connection.py  deploy-dev.sh  deploy-dor.sh  deploy-fast.sh  deploy.sh  docker-compose.test.yml  docker-compose.yml  dockerfile  environment.example  fix_alembic.py  migrate_to_postgresql.py  promote-to-production.sh  pyproject.toml  pytest.ini  (+26 more)
app/: __init__.py  main.py
db/: chroma.sqlite3
docs/: AUTO_DELETE_ORPHANED_DIGITAL_ASSETS.md  MESSAGE_ID_FEATURE.md  METRICS_SYNC_GAPS.md  TESTING_DATABASE_SAFETY.md  langfuse_and_mcp_fixes.md  local_mcp_servers.md  mcp_oauth_and_validation.md  mcp_transport_fix.md
reports/: qa_results_20251204_132530.xlsx  qa_results_20251204_132539.xlsx  qa_results_20251204_132554.xlsx  test-report.html
scripts/: add_use_database_config_setting.py  cleanup_orphaned_digital_assets.py  convert_env_to_yaml.sh  create_qa_template.py  create_sample_template.py  create_tasks_table.py  crew_conversation.py  deploy-dev.sh  deploy-dor.sh  deploy-fast.sh  drop_nc_tables.py  find_duplicate_digital_assets.py  generate_test_token.py  (+15 more)
(+320 files in other folders)
